# SCZR-project

./: .gitignore  CMakeLists.txt  README.md
src/Consumer/: CMakeLists.txt  consumer.cpp  consumer.h  main.cpp
src/Others/: CMakeLists.txt  database.cpp  database.h  deadlineScheduling.h  messageQueue.cpp  messageQueue.h  schedulingPolicies.cpp  schedulingPolicies.h  sharedMemory.cpp  sharedMemory.h  utilities.cpp  utilities.h
src/Producer/: CMakeLists.txt  main.cpp  producer.cpp  producer.h
src/tests/: CMakeLists.txt  deadlineSchedulerTest.cpp  test.cpp
